--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,9 +3,9 @@ name: Deploy to AWS
 
 on:
   push:
-    branches: [ main ]  # Trigger on push to main branch
+    branches: [ master ]  # Trigger on push to main branch
   pull_request:
-    branches: [ main ]
+    branches: [ master ]
 
 env:
   AWS_REGION: us-east-2
